# test-package-malmans2

./: .cruft.json  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: on-push.yml  on-release.yml  zizmor.yml
docs/: conf.py  index.md
test_package_malmans2/: __init__.py
tests/: test_00_version.py
